# mpfem

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  README.md  capture.csv  fix.md  prompt.md  prompt2.md  vcpkg.json
examples/: CMakeLists.txt  busbar_example.cpp  busbar_inspect.cpp
src/: CMakeLists.txt  mpfem.hpp
src/assembly/: assembler.cpp  assembler.hpp  assembly.hpp  bilinear_form.cpp  bilinear_form.hpp  dirichlet_bc.hpp  dof_map.cpp  dof_map.hpp  element_binding.hpp  fe_values.cpp  fe_values.hpp  integrator.hpp  integrators.cpp  integrators.hpp  linear_form.cpp  linear_form.hpp
src/coefficient/: coefficient.hpp  material_coefficient.cpp  material_coefficient.hpp
src/config/: case_config.hpp  case_parser.cpp  case_parser.hpp  problem_config_loader.cpp
src/core/: exception.hpp  geometry.hpp  hash.hpp  kernels.hpp  logger.cpp  logger.hpp  sparse_matrix.hpp  string_utils.hpp  tensor.hpp  tensor_shape.hpp  tensor_value.hpp  types.hpp
src/coupling/: joule_heating.hpp  temperature_dependent_coefficient.hpp
src/dof/: dof_handler.cpp  dof_handler.hpp  dof_table.hpp  fe_space.cpp  fe_space.hpp  field_registry.cpp  field_registry.hpp  field_space.cpp  field_space.hpp
src/expr/: evaluation_context.hpp  expression_parser.cpp  expression_parser.hpp  runtime_program.cpp  runtime_program.hpp  symbol_scanner.cpp  symbol_scanner.hpp  unit_parser.cpp  unit_parser.hpp  variable_graph.cpp  variable_graph.hpp
src/fe/: coefficient.cpp  coefficient.hpp  element_transform.cpp  element_transform.hpp  facet_element_transform.cpp  facet_element_transform.hpp  fe_collection.hpp  fe_space.cpp  fe_space.hpp  fe_values.cpp  fe_values.hpp  finite_element.cpp  finite_element.hpp  geometry_mapping.cpp  geometry_mapping.hpp  grid_function.cpp  grid_function.hpp  h1.cpp  h1.hpp  nd.cpp  nd.hpp  quadrature.cpp  quadrature.hpp  reference_element.cpp  reference_element.hpp  shape_evaluator.hpp  shape_function.cpp  shape_function.hpp
src/fem/: bilinear_form.cpp  coefficient.cpp  element_transformation.cpp  element_transformation.hpp  fe.cpp  fe_base.hpp  fe_cache.hpp  fe_collection.cpp  fe_collection.hpp  fe_h1.cpp  fe_h1.hpp  fe_space.cpp  grid_function.cpp  integration_rule.hpp  integrators.cpp  quadrature.cpp  quadrature.hpp
src/field/: fe_space.cpp  fe_space.hpp  field_values.hpp  grid_function.cpp  grid_function.hpp
src/io/: case_definition.hpp  case_xml_reader.cpp  case_xml_reader.hpp  compiled_expression_coefficient.cpp  compiled_expression_coefficient.hpp  comsol_writer.cpp  comsol_writer.hpp  expression_symbol_usage.cpp  expression_symbol_usage.hpp  exprtk_expression_parser.cpp  exprtk_expression_parser.hpp  material_database.cpp  material_database.hpp  material_reader.cpp  material_reader.hpp  material_xml_reader.cpp  material_xml_reader.hpp  mphtxt_reader.cpp  mphtxt_reader.hpp  operator_xml_parser.hpp  problem_input_loader.cpp  problem_input_loader.hpp  result_exporter.cpp  result_exporter.hpp  result_writer.cpp  result_writer.hpp  unit_parser.cpp  unit_parser.hpp  value_parser.cpp  value_parser.hpp  variable_system.cpp  variable_system.hpp  vtk_writer.cpp  vtu_writer.cpp  vtu_writer.hpp  xml_reader.cpp  xml_reader.hpp
src/linalg/: direct_solver.cpp  direct_solver.hpp  iterative_solver.cpp  iterative_solver.hpp  pardiso_solver.hpp  solver_base.hpp
src/material/: comsol_material_reader.cpp  material_database.cpp  material_database.hpp  material_property.hpp
src/mesh/: boundary_topology.cpp  comsol_mesh_reader.cpp  connectivity.hpp  element.hpp  geometry.hpp  mesh.cpp  mesh.hpp  mesh_topology.cpp  mesh_topology.hpp  mphtxt_reader.cpp  mphtxt_reader.hpp  vertex.hpp
src/mesh/io/: mphtxt_reader.cpp  mphtxt_reader.hpp
src/model/: case_definition.hpp  field_kind.hpp  material_database.cpp  material_database.hpp
src/operator/: cg_operator.hpp  gauss_seidel_operator.hpp  gmres_operator.hpp  icc_operator.hpp  ilu_operator.hpp  jacobi_operator.hpp  linear_operator.hpp  operator_config.hpp  operator_factory.hpp  parameter_list.hpp  sparse_lu_operator.hpp  sparse_matrix.hpp  umfpack_operator.hpp
src/physics/: assembly_change_tracker.hpp  coupling_manager.cpp  coupling_manager.hpp  electrostatics.cpp  electrostatics.hpp  electrostatics_solver.cpp  electrostatics_solver.hpp  field_values.hpp  heat_transfer.cpp  heat_transfer.hpp  heat_transfer_solver.cpp  heat_transfer_solver.hpp  physics_assembly.hpp  physics_field_solver.hpp  physics_problem_builder.cpp  physics_problem_builder.hpp  solid_mechanics.cpp  solid_mechanics.hpp  structural_solver.cpp  structural_solver.hpp
src/problem/: expression_coefficient_factory.cpp  expression_coefficient_factory.hpp  physics_problem_builder.cpp  physics_problem_builder.hpp  problem.cpp  problem.hpp  steady_problem.hpp  transient_problem.cpp  transient_problem.hpp
src/problem/time/: adaptive_time_stepper.hpp  bdf1_integrator.cpp  bdf1_integrator.hpp  (+6 more)
src/solver/: coupled_solver.cpp  eigen_preconditioner_adapter.hpp  eigen_solver.cpp  eigen_solver.hpp  linear_operator.cpp  linear_operator.hpp  linear_solver.cpp  linear_solver.hpp  pardiso_solver.cpp  pardiso_solver.hpp  physics_solver.cpp  preconditioner.cpp  preconditioner.hpp  solver_config.cpp  solver_config.hpp  solver_factory.cpp  solver_factory.hpp  sparse_matrix.hpp  superlu_solver.hpp  umfpack_solver.cpp  umfpack_solver.hpp
src/time/: adaptive_time_stepper.hpp  bdf1_integrator.cpp  bdf1_integrator.hpp  bdf2_integrator.cpp  bdf2_integrator.hpp  time_integrator.cpp  time_integrator.hpp  time_scheme.hpp  time_stepper.hpp
tests/: CMakeLists.txt  busbar_case_test.cpp  test_assembly.cpp  test_case_xml_reader.cpp  test_coefficient.cpp  test_config.cpp  test_curved_element.cpp  test_dof.cpp  test_electrostatics_solver.cpp  test_element_transform.cpp  test_fe_space.cpp  test_fe_space_quadratic.cpp  test_fe_values.cpp  test_fem.cpp  test_grid_function.cpp  test_h1.cpp  test_integrator.cpp  test_literal.cpp  test_material_xml_reader.cpp  test_mesh.cpp  test_mesh_read.cpp  test_nd.cpp  test_quadrature.cpp  test_shape_function.cpp  test_value_parser.cpp  test_variable.cpp
(+60 files in other folders)
